package org.tp1.agence.grpc.client;

import io.grpc.StatusRuntimeException;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.stereotype.Service;
import org.tp1.commun.grpc.hotel.*;

import java.util.ArrayList;
import java.util.List;

/**
 * Client gRPC pour communiquer avec un h√¥tel
 * Remplace HotelRestClient
 */
@Service
public class HotelGrpcClient {

    @GrpcClient("hotel-paris")
    private HotelServiceGrpc.HotelServiceBlockingStub hotelParisStub;

    @GrpcClient("hotel-lyon")
    private HotelServiceGrpc.HotelServiceBlockingStub hotelLyonStub;

    @GrpcClient("hotel-montpellier")
    private HotelServiceGrpc.HotelServiceBlockingStub hotelMontpellierStub;

    /**
     * Rechercher des chambres dans un h√¥tel sp√©cifique via gRPC
     */
    public List<ChambreMessage> rechercherChambres(String hotelName, RechercheRequest request) {
        try {
            HotelServiceGrpc.HotelServiceBlockingStub stub = getStubForHotel(hotelName);
            if (stub == null) {
                System.err.println("‚ùå Stub non trouv√© pour l'h√¥tel: " + hotelName);
                return new ArrayList<>();
            }

            System.out.println("üîç [gRPC Client] Recherche dans l'h√¥tel: " + hotelName);
            RechercheResponse response = stub.rechercherChambres(request);
            System.out.println("‚úÖ [gRPC Client] " + response.getChambresCount() + " chambres trouv√©es dans " + hotelName);

            return response.getChambresList();

        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå [gRPC Client] Erreur lors de la recherche dans " + hotelName + ": " + e.getStatus());
            return new ArrayList<>();
        } catch (Exception e) {
            System.err.println("‚ùå [gRPC Client] Erreur inattendue lors de la recherche dans " + hotelName + ": " + e.getMessage());
            return new ArrayList<>();
        }
    }

    /**
     * Effectuer une r√©servation dans un h√¥tel sp√©cifique via gRPC
     */
    public org.tp1.commun.grpc.hotel.ReservationResponse effectuerReservation(
            String hotelName,
            org.tp1.commun.grpc.hotel.ReservationRequest request) {
        try {
            HotelServiceGrpc.HotelServiceBlockingStub stub = getStubForHotel(hotelName);
            if (stub == null) {
                return org.tp1.commun.grpc.hotel.ReservationResponse.newBuilder()
                        .setSuccess(false)
                        .setMessage("H√¥tel non trouv√©: " + hotelName)
                        .build();
            }

            System.out.println("üè® [gRPC Client] R√©servation dans l'h√¥tel: " + hotelName);
            org.tp1.commun.grpc.hotel.ReservationResponse response = stub.effectuerReservation(request);

            if (response.getSuccess()) {
                System.out.println("‚úÖ [gRPC Client] R√©servation r√©ussie dans " + hotelName);
            } else {
                System.out.println("‚ùå [gRPC Client] √âchec de la r√©servation dans " + hotelName + ": " + response.getMessage());
            }

            return response;

        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå [gRPC Client] Erreur gRPC lors de la r√©servation dans " + hotelName + ": " + e.getStatus());
            return org.tp1.commun.grpc.hotel.ReservationResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Erreur de communication avec l'h√¥tel: " + e.getStatus().getDescription())
                    .build();
        } catch (Exception e) {
            System.err.println("‚ùå [gRPC Client] Erreur inattendue lors de la r√©servation: " + e.getMessage());
            return org.tp1.commun.grpc.hotel.ReservationResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Erreur inattendue: " + e.getMessage())
                    .build();
        }
    }

    /**
     * Obtenir le stub gRPC appropri√© selon le nom de l'h√¥tel
     */
    private HotelServiceGrpc.HotelServiceBlockingStub getStubForHotel(String hotelName) {
        if (hotelName == null) {
            return null;
        }

        String lowerName = hotelName.toLowerCase();
        if (lowerName.contains("paris")) {
            return hotelParisStub;
        } else if (lowerName.contains("lyon")) {
            return hotelLyonStub;
        } else if (lowerName.contains("montpellier")) {
            return hotelMontpellierStub;
        }

        return null;
    }

    /**
     * Obtenir le stub selon l'adresse de l'h√¥tel
     */
    public HotelServiceGrpc.HotelServiceBlockingStub getStubByAddress(String address) {
        if (address == null) {
            return null;
        }

        String lowerAddress = address.toLowerCase();
        if (lowerAddress.contains("paris")) {
            return hotelParisStub;
        } else if (lowerAddress.contains("lyon")) {
            return hotelLyonStub;
        } else if (lowerAddress.contains("montpellier")) {
            return hotelMontpellierStub;
        }

        return null;
    }

    /**
     * Obtenir les chambres r√©serv√©es d'un h√¥tel via gRPC
     */
    public List<ChambreMessage> getChambresReservees(String hotelName) {
        try {
            HotelServiceGrpc.HotelServiceBlockingStub stub = getStubForHotel(hotelName);
            if (stub == null) {
                System.err.println("‚ùå Stub non trouv√© pour l'h√¥tel: " + hotelName);
                return new ArrayList<>();
            }

            System.out.println("üìã [gRPC Client] R√©cup√©ration des chambres r√©serv√©es de: " + hotelName);

            ChambresReserveesRequest request = ChambresReserveesRequest.newBuilder().build();
            ChambresReserveesResponse response = stub.getChambresReservees(request);

            System.out.println("‚úÖ [gRPC Client] " + response.getChambresCount() + " chambres r√©serv√©es dans " + hotelName);

            return response.getChambresList();

        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå [gRPC Client] Erreur lors de la r√©cup√©ration des chambres r√©serv√©es dans " + hotelName + ": " + e.getStatus());
            return new ArrayList<>();
        } catch (Exception e) {
            System.err.println("‚ùå [gRPC Client] Erreur inattendue: " + e.getMessage());
            return new ArrayList<>();
        }
    }
}
