package org.tp1.client.grpc;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;
import org.tp1.client.dto.ChambreDTO;
import org.tp1.client.dto.RechercheRequest;
import org.tp1.client.dto.ReservationRequest;
import org.tp1.client.dto.ReservationResponse;

import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

/**
 * Service pour g√©rer plusieurs agences via gRPC
 * Remplace MultiAgenceRestClient
 */
@Service
public class MultiAgenceGrpcClient {

    @Autowired
    private AgenceGrpcClient agenceGrpcClient;

    private final List<String> agences = Arrays.asList("agence1", "agence2");

    /**
     * Rechercher des chambres dans toutes les agences
     */
    public List<ChambreDTO> rechercherChambres(RechercheRequest request) {
        List<ChambreDTO> toutesLesChambres = new ArrayList<>();

        System.out.println("üîç [Multi-Agence gRPC] Recherche dans toutes les agences...");

        for (String agence : agences) {
            try {
                List<ChambreDTO> chambres = agenceGrpcClient.rechercherChambres(agence, request);
                toutesLesChambres.addAll(chambres);
            } catch (Exception e) {
                System.err.println("‚ùå Erreur lors de la recherche dans " + agence + ": " + e.getMessage());
            }
        }

        System.out.println("‚úÖ [Multi-Agence gRPC] Total: " + toutesLesChambres.size() + " chambres trouv√©es");
        return toutesLesChambres;
    }

    /**
     * Effectuer une r√©servation via une agence
     * L'agence est d√©termin√©e automatiquement selon l'adresse de l'h√¥tel
     */
    public ReservationResponse effectuerReservation(ReservationRequest request) {
        // Essayer avec la premi√®re agence, puis la deuxi√®me si √©chec
        for (String agence : agences) {
            try {
                ReservationResponse response = agenceGrpcClient.effectuerReservation(agence, request);
                if (response.isSuccess()) {
                    return response;
                }
            } catch (Exception e) {
                System.err.println("‚ùå Erreur lors de la r√©servation via " + agence + ": " + e.getMessage());
            }
        }

        return new ReservationResponse(0, "√âchec de la r√©servation dans toutes les agences", false);
    }

    /**
     * V√©rifier la disponibilit√© des agences
     */
    public List<String> getAgencesDisponibles() {
        List<String> disponibles = new ArrayList<>();

        for (String agence : agences) {
            if (agenceGrpcClient.ping(agence)) {
                disponibles.add(agence);
            }
        }

        return disponibles;
    }

    /**
     * Ping toutes les agences et retourner un message de statut
     */
    public String ping() {
        List<String> disponibles = getAgencesDisponibles();
        if (disponibles.isEmpty()) {
            return "Aucune agence disponible";
        }
        return disponibles.size() + " agence(s) disponible(s): " + String.join(", ", disponibles);
    }

    /**
     * Obtenir la liste des h√¥tels disponibles
     * Note: Cette m√©thode n'est pas encore impl√©ment√©e en gRPC
     */
    public List<String> getHotelsDisponibles() {
        // Pour l'instant, retourner une liste fixe
        List<String> hotels = new ArrayList<>();
        hotels.add("Hotel Paris");
        hotels.add("Hotel Lyon");
        hotels.add("Hotel Montpellier");
        return hotels;
    }

    /**
     * Obtenir les chambres r√©serv√©es de tous les h√¥tels
     */
    public java.util.Map<String, List<ChambreDTO>> getChambresReservees() {
        java.util.Map<String, List<ChambreDTO>> toutesLesChambres = new java.util.HashMap<>();

        System.out.println("üìã [Multi-Agence gRPC] R√©cup√©ration des chambres r√©serv√©es...");

        // R√©cup√©rer les chambres r√©serv√©es de la premi√®re agence disponible
        for (String agence : agences) {
            try {
                java.util.Map<String, List<ChambreDTO>> chambres = agenceGrpcClient.getChambresReservees(agence);

                // Fusionner les r√©sultats
                for (java.util.Map.Entry<String, List<ChambreDTO>> entry : chambres.entrySet()) {
                    String hotelNom = entry.getKey();
                    List<ChambreDTO> chambresHotel = entry.getValue();

                    if (toutesLesChambres.containsKey(hotelNom)) {
                        // Ajouter √† la liste existante
                        toutesLesChambres.get(hotelNom).addAll(chambresHotel);
                    } else {
                        // Cr√©er une nouvelle liste
                        toutesLesChambres.put(hotelNom, new ArrayList<>(chambresHotel));
                    }
                }

                // Retourner d√®s qu'on a des r√©sultats (pas besoin de toutes les agences)
                if (!toutesLesChambres.isEmpty()) {
                    break;
                }
            } catch (Exception e) {
                System.err.println("‚ùå Erreur lors de la r√©cup√©ration dans " + agence + ": " + e.getMessage());
            }
        }

        System.out.println("‚úÖ [Multi-Agence gRPC] Total: " + toutesLesChambres.size() + " h√¥tel(s) avec des r√©servations");
        return toutesLesChambres;
    }
}
